@@ -18,7 +18,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkWinSendCom.c,v 1.10 2010/01/22 14:17:53 nijtmans Exp $
+ * RCS: @(#) $Id: tkWinSendCom.c,v 1.11 2010/04/08 14:06:20 nijtmans Exp $
  */
 
 #include "tkInt.h"
@@ -252,9 +252,9 @@ WinSendCom_GetIDsOfNames(
 
     if (rgDispId) {
 	hr = DISP_E_UNKNOWNNAME;
-	if (wcscasecmp(*rgszNames, L"Send") == 0) {
+	if (_wcsicmp(*rgszNames, L"Send") == 0) {
 	    *rgDispId = TKWINSENDCOM_DISPID_SEND, hr = S_OK;
-	} else if (wcscasecmp(*rgszNames, L"Async") == 0) {
+	} else if (_wcsicmp(*rgszNames, L"Async") == 0) {
 	    *rgDispId = TKWINSENDCOM_DISPID_ASYNC, hr = S_OK;
 	}
     }
